# kebab-tqdm

./: .gitignore  LICENSE  README.md  pyproject.toml
src/kebab_tqdm/: __init__.py  __main__.py  chef_scene.txt
