[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kebab-tqdm"
version = "0.1.0"
description = "A drop-in replacement for the tqdm progress bar. Shows Karim from Karim's shaving a turning doner kebab."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Kristóf Sándor", email = "1de85wxzz@mozmail.com" }]
keywords = ["tqdm", "progress", "progressbar", "kebab", "doner", "ascii", "fun"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Utilities",
    "Topic :: Terminals",
]
dependencies = ["tqdm>=4.0"]

[project.urls]
Homepage = "https://github.com/kristofsandor/kebab-tqdm"
Issues = "https://github.com/kristofsandor/kebab-tqdm/issues"
"Karim's Fastfood" = "https://maps.app.goo.gl/c4kMGDbDMhQZdrkB9"

[project.scripts]
kebab-demo = "kebab_tqdm.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
kebab_tqdm = ["chef_scene.txt"]
